# Unilasalle-Public-Resources

./: .gitignore  .pre-commit-config.yaml  .~lock.course.pptx#  CONTRIBUTING.md  README.md  SECURITY.md  course.md  course.ppt  pyproject.toml  requirements.txt
.utils/: pre-push.sh
2a-statistical-tests/: README.md
2a-statistical-tests/00-session/: 000-Basics.R  001-Main-data-types.R  0031-1d-data-structures.R  02-Control-statements.R
2a-statistical-tests/01-session/: 001-Basics.R  001-Basics.html  001-Basics.ipynb  002-Main-data-types.html  002-Main-data-types.ipynb  003-Control-statements.html  003-Control-statements.ipynb  004-1d-data-structures.html  004-1d-data-structures.ipynb  0101-Basics.R  0102-Main-data-types.R  0102-Main-data-types.ipynb  0103-Control-statements.R  0104-1d-data-structures.R  0104-1d-data-structures.html  countries.csv  database.csv
2a-statistical-tests/02-session/: 001-About-dataframes.R  001-About-dataframes.html  001-About-dataframes.ipynb  002-Working-on-real-data.R  002-Working-on-real-data.html  002-Working-on-real-data.ipynb  0201-About-dataframes.R  0201-About-dataframes.html  0201-About-dataframes.ipynb  0202-Working-on-real-data.R
2a-statistical-tests/03-session/: 0301-Statistics.R  0302-Visualizations.R
2a-statistical-tests/04-session/: 0401-Parametrics.R  0402-Non-Parametrics.R
2a-statistical-tests/05-session/: R Test - isafe 2024.docx
2a-statistical-tests/06-session/: 0601-About_Rica_dataset_solution.R  0601-About_Rica_dataset_training.R  RICA_isafe_students_vf.csv
2a-statistical-tests/07-session/: 0701-Problems_vs_Data_selection_solution.R  datatypes.csv  defs.csv
2a-statistical-tests/08-session/: 0801-Problems_and_code_solution.R  0801-Problems_and_code_training.R  0801-Questions_answer_questions.R  0801-Questions_answer_solution.R  0801-live-session.R  RICA_isafe_students_vf.xlsx  dictionnary.csv  modalities.csv
2a-statistical-tests/09-session/: 0901-Last-Session.R  0901-Questions.R  0901-las-session.R
2d-statistical-tests/00-session/: 000-Basics.R  001-Main-data-types.R
4a-data-analysis/: 0502-Python_solution.ipynb
4a-data-analysis/00-session/: 00-01-Course.md  00-notebook_public.html  00-notebook_public.ipynb
4a-data-analysis/01-session/: 001-notebook_solution.html  001-notebook_solution.ipynb  001-notebook_syllabus.html  001-notebook_syllabus.ipynb  0101-solution-notebook.html  0101-solution-notebook.ipynb  0101-training-notebook.html  0101-training-notebook.ipynb  data.csv
4a-data-analysis/02-session/: 001-notebook_public.html  001-notebook_public.ipynb  0201-solution-notebook.html  0201-solution-notebook.ipynb  0201-training-notebook.html  0201-training-notebook.ipynb  __dataprep.html  __dataprep.ipynb  chicken.csv
4a-data-analysis/03-session/: 0301-solution-notebook.html  0301-solution-notebook.ipynb  0301-training-notebook.html  0301-training-notebook.ipynb  chicken.csv  chidken_cleaned.csv
4a-data-analysis/04-session/: 0401-solution-notebook.html  0401-solution-notebook.ipynb  0401-training-notebook.html  0401-training-notebook.ipynb  chicken_cleaned.csv
4a-data-analysis/05-exam/: 0501.md  0502-Data_Analytics_With_Python_exam.ipynb  0502-Data_Analytics_With_Python_test.ipynb  README.md  iris_exam.csv
(+9 files in other folders)
